--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
-<div class="jumbotron text-center">
-    <h1>Welcome to Dev Match</h1>
-    <h3>A membership site where entrepreneurs can meet developers.</h3>
-</div>
+<!--<div class="jumbotron text-center">-->
+<!--    <h1>Welcome to Dev Match</h1>-->
+<!--    <h3>A membership site where entrepreneurs can meet developers.</h3>-->
+<!--</div>-->
 
 <div class="row">
     <div class="col-md-6">
@@ -14,7 +14,7 @@
     </div>
     <div class="col-md-6">
         <div class="well">
-            <h2 class="text-center">Basic Memebership</h2>
+            <h2 class="text-center">Pro Memebership</h2>
             <h4>Sign up for the pro account for $10/month and get access to the community and contact information!</h4>
             <%= link_to "Sign up with Pro", new_user_registration_path(plan: @pro_plan.id), class: 'btn btn-success btn-lg btn-block' %>
         </div>
