--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,6 +2,7 @@
     <div class="well">
         <%= @user.profile.first_name %> <%= @user.profile.last_name %><br/>
         <%= @user.profile.job_title %><br/>
+        <%= image_tag @user.profile.avatar.url %><br/>
         
         <% if current_user.plan_id == 2 %>
           <%= @user.profile.phone_number %><br/>
