--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,4 +1,7 @@
+/* Users Show Page Styles */
 .profile-avatar {
+  height: 128px;
+  width: 128px;
   border-radius: 50%;
   border: 0px solid #000;
   -webkit-box-shadow: 1px 8px 40px -8px rgba(0,0,0,0.75);
@@ -30,4 +33,11 @@
 .well.contact-info {
   background-color: #5bc0de;
   border-color: #46b8da;
+}
+/* Users Index Page Styles */
+.user-index-avatar {
+  border-radius: 50%;
+}
+.well.white-bg {
+  background-color: white;
 }
