--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,4 +1,5 @@
-<h2>Contact Us</h2>
+<h1 class="text-center">Contact Us</h1>
+<p class="text-center">Reach out if you have any questions or comments.</p>
 <div class="row">
     <div class="col-md-4 col-md-offset-4">
         <div class="well">
